# DinoV2_LitServeAPI

./: .gitignore  Dockerfile  README.md  checkpoints.dvc  client.py  mqtt_client.py  mqtt_receiver.py  mqtt_subscriber.py  prediction_result.json  pyproject.toml  requirements.txt  server.py
.dvc/: config
inference/: inference.py  training_data_generator.py  utils.py
utils/: bay_coordinates.json
